--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<li><a href="https://www.facebook.com/masud.apece1314/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.linkedin.com/in/masud-ahmed-48b0a71b9/" class="icon fa-linkedin"><span class="label">Linkdin</span></a></li>
 						<li><a href="https://github.com/mahmed10" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="https://join.skype.com/invite/jDTFw59RDhAa" class="icon fa-skype"><span class="label">Skype</span></a></li>
+						<li><a href="https://join.skype.com/invite/jDTFw59RDhAa" class="icon ai-google-scholar big-icon"><span class="label">Skype</span></a></li>
 						<li><a href="https://mail.google.com/mail/?view=cm&source=mailto&to=mahmed10@umbc.edu" class="icon fa-envelope"><span class="label">Email</span></a></li> <bl>
 					</ul>
 				</footer>
