--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 												</h4>
 												[January 2020  - Present]
 
-												<p>Working here as a graduate assistant. My research topic in this lab is related to computer vision and machine learning.</p>
+												<p>Working here as a graduate assistant. My research topic in this lab is related to computer vision and machine learning. I am working with RGB and Lidar data based object segmentation and tracking. The application of research is monitoring urban areas and the marine environment.</p>
 											</div>
 										</article>
 
