--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 										<a href="https://www.umbc.edu/">Univesity of Maryland, Baltimore County</a>.</p>
 									</header>
 									<p>Hello! Welcome to my webpage. I am a data scientist, currently pursuing my Ph.D. in the Department of Information Systems at the University of Maryland, Baltimore County, under the supervision of <a href="https://userpages.umbc.edu/~nroy/">Dr. Nirmalya Roy</a>. I am a team member of <a href="https://mpsc.umbc.edu/home">Mobile, Pervasive and Sensor Computing (MPSC) Lab</a>. My academic research focuses on object detection, tracking, and segmentation by visionary sensors (e.g., RGB camera, LIDAR, Thermal camera) using machine learning. My current work spans around computer vision, multi-modality. I have experience working with signal processing, time-series data analysis. I am also working as a teaching assistant for the course, Network Design and Management.</p>
-									<a href="https://drive.google.com/open?id=1_mULC8TMnVEv-kTONwwbLjk5zvi4ZYau&authuser=mahmed10%40umbc.edu&usp=drive_fs" class="btn btn-fill" target="_blank" download>To download my resume click here</a>
+									<a href="https://drive.google.com/file/d/1_mULC8TMnVEv-kTONwwbLjk5zvi4ZYau/view?usp=sharing" class="btn btn-fill" target="_blank" download>To download my resume click here</a>
 								</div>
 							</section>
 
