--- a/index.html
+++ b/index.html
@@ -266,6 +266,15 @@
 										<h4>Global Competition Awards</h4>
 											<div class="pub-list-item" style="margin-bottom: 1rem" itemscope="" itemtype="http://schema.org/CreativeWork">
 			  									<i class="fa fa-trophy" aria-hidden="true"></i>
+			  									<a href="https://gears.umbc.edu/3mt/" itemprop="name">UMBC 3 Minute Thesis People's Choice</a>
+			  									<p>
+			  										5 April 2018 <br>
+			  										UMBC, Maryland, USA
+			  									</p>
+		  									</div>
+											
+											<div class="pub-list-item" style="margin-bottom: 1rem" itemscope="" itemtype="http://schema.org/CreativeWork">
+			  									<i class="fa fa-trophy" aria-hidden="true"></i>
 			  									<a href="http://www.shl-dataset.org/activity-recognition-challenge/" itemprop="name">SHL Challenge 2018</a>
 			  									<p>
 			  										12 October 2018 <br>
