--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 										<article>
 											<h4>Community Involvement</h4>
 											<li>
-												<b><a href="https://gears.umbc.edu/">GEARS (UMBC)</a></b>, Committee Member (Designer)
+												<b><a href="https://gears.umbc.edu/">GEARS (UMBC)</a></b>, Co-Chair
 											</li>
 											<li>
 												<b><a href="https://www.ieee.org/">IEEE</a></b>, Student Member
