--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 										<p> Graduate Teaching Assistant<br />
 										<a href="https://www.umbc.edu/">Univesity of Maryland, Baltimore County</a>.</p>
 									</header>
-									<p>Hello! Welcome to my webpage. I am a data scientist, currently pursuing my Ph.D. in the Department of Information Systems at the University of Maryland, Baltimore County, under the supervision of <a href="https://userpages.umbc.edu/~nroy/">Dr. Nirmalya Roy</a>. I am a team member of <a href="https://mpsc.umbc.edu/home">Mobile, Pervasive and Sensor Computing (MPSC) Lab</a>. My academic research focuses on object detection, tracking, and segmentation by visionary sensors (e.g., RGB camera, LIDAR, Thermal camera) using machine learning. My current work spans around computer vision, multi-modality. I have experience working with signal processing, time-series data analysis. I am also working as a teaching assistant for the course, Network Design and Management.</p>
+									<p>
+										Welcome to my personal webpage! I am an enthusiastic Ph.D. candidate at the University of Maryland, Baltimore County, specializing in Artificial Intelligence and Machine Learning. Under the guidance of <a href="https://userpages.umbc.edu/~nroy/">Dr. Nirmalya Roy</a> in the Department of Information Systems, I am honing my skills in the cutting-edge fields of predictive modeling, domain adaptation, and various forms of learning, including continual, self-supervised, and active learning.
+									</p>
 									<a href="https://drive.google.com/file/d/1_mULC8TMnVEv-kTONwwbLjk5zvi4ZYau/view?usp=sharing" class="btn btn-fill" target="_blank" download>To download my resume click here</a>
 								</div>
 							</section>
