--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
 										<a href="https://www.umbc.edu/">Univesity of Maryland, Baltimore County</a>.</p>
 									</header>
 									<p>
-										Welcome to my personal webpage! I am an enthusiastic Ph.D. candidate at the University of Maryland, Baltimore County, specializing in Artificial Intelligence and Machine Learning. Under the guidance of <a href="https://userpages.umbc.edu/~nroy/">Dr. Nirmalya Roy</a> in the Department of Information Systems, I am honing my skills in the cutting-edge fields of predictive modeling, domain adaptation, and various forms of learning, including continual, self-supervised, and active learning.
+										Welcome to my personal webpage! I am an enthusiastic Ph.D. candidate at the University of Maryland, Baltimore County, specializing in Artificial Intelligence and Machine Learning. Under the guidance of <a href="https://userpages.umbc.edu/~nroy/">Dr. Nirmalya Roy</a> in the Department of Information Systems, I am honing my skills in the cutting-edge fields of generative modeling, domain adaptation, and various forms of learning, including continual, self-supervised, and active learning.
+
+										As a member of the Mobile, Pervasive and Sensor Computing (MPSC) Lab, I thrive in collaborative settings and am passionate about exploring theoretical and application-driven research. My work spans a range of exciting areas, from computer vision to natural language processing, focusing on the practical applications of AI in Robotics.
 									</p>
 									<a href="https://drive.google.com/file/d/1_mULC8TMnVEv-kTONwwbLjk5zvi4ZYau/view?usp=sharing" class="btn btn-fill" target="_blank" download>To download my resume click here</a>
 								</div>
