--- a/index.html
+++ b/index.html
@@ -68,6 +68,28 @@
 									<a href="https://drive.google.com/file/d/1_mULC8TMnVEv-kTONwwbLjk5zvi4ZYau/view?usp=sharing" class="btn btn-fill" target="_blank" download>To download my resume click here</a>
 								</div>
 							</section>
+						<!-- research -->
+							<section id="research">
+								<div class="container">
+									<h3>Reserach Areas</h3>
+									<div class="features">
+										<article>
+											<h4>Theoretical</h4>
+											<li>
+												Predictive Modeling, Domain Adaptation, Continual Learning, Self-Supervised Learning, Active Learning, Transformer, Diffusion model, Large Language Model, Large Vision Model
+											</li>
+											<h4>Application</h4>
+											<li>
+												Computer Vision, Natural Language Processing, Robotics, Wearable Device Data Analysis, Sensor Data Analysis
+											</li>
+											<h4>Programming Languages</h4>
+											<li>
+												Python, C++, C, SQL (Oracle), MATLAB, HTML, R programming, ROS (Robot Operating System)
+											</li>
+										</article>
+									</div>
+								</div>
+							</section>
 
 						<!-- education -->
 							<section id="eudcation">
