--- a/index.html
+++ b/index.html
@@ -78,10 +78,14 @@
 											<li>
 												Predictive Modeling, Domain Adaptation, Continual Learning, Self-Supervised Learning, Active Learning, Transformer, Diffusion model, Large Language Model, Large Vision Model
 											</li>
+										</article>
+										<article>
 											<h4>Application</h4>
 											<li>
 												Computer Vision, Natural Language Processing, Robotics, Wearable Device Data Analysis, Sensor Data Analysis
 											</li>
+										</article>
+										<article>
 											<h4>Programming Languages</h4>
 											<li>
 												Python, C++, C, SQL (Oracle), MATLAB, HTML, R programming, ROS (Robot Operating System)
