--- a/index.html
+++ b/index.html
@@ -63,12 +63,45 @@
 									</header>
 									<p>
 										Welcome to my personal webpage! I am an enthusiastic Ph.D. candidate at the University of Maryland, Baltimore County, specializing in Artificial Intelligence and Machine Learning. Under the guidance of <a href="https://userpages.umbc.edu/~nroy/">Dr. Nirmalya Roy</a> in the Department of Information Systems, I am honing my skills in the cutting-edge fields of generative modeling, domain adaptation, and various forms of learning, including continual, self-supervised, and active learning.
-
+								
 										As a member of the Mobile, Pervasive and Sensor Computing (MPSC) Lab, I thrive in collaborative settings and am passionate about exploring theoretical and application-driven research. My work spans a range of exciting areas, from computer vision to natural language processing, focusing on the practical applications of AI in Robotics.
 									</p>
 									<a href="https://drive.google.com/file/d/1_mULC8TMnVEv-kTONwwbLjk5zvi4ZYau/view?usp=sharing" class="btn btn-fill" target="_blank" download>To download my resume click here</a>
 								</div>
 							</section>
+
+						<!-- education -->
+							<section id="eudcation">
+								<div class="container">
+									<h3>Education</h3>
+									<ul class="ul-edu fa-ul">
+									<li>
+										<i class="fa-li fa fa-graduation-cap"></i>
+										<div class="description">
+											<p class="course">Ph.D. in Information Systems (January 2020 - Present)</p>
+											<p>University of Maryland, Baltimore County <br>
+											Supervisior: <a href="https://userpages.umbc.edu/~nroy/">Dr. Nirmalya Roy</a>, Professor <br>
+											CGPA: 3.90/4.00</p>
+										</div>
+									</li>
+									<li>
+										<i class="fa-li fa fa-graduation-cap"></i>
+										<div class="description">
+											<p class="course">B.Sc. in Electrical and Electronic Engineering (January 2014  - April 2018)</p>
+											<p>University of Dhaka<br>
+											Supervisor: <a href="http://aa.binbd.com/">Dr. Md Atiqur Rahman Ahad</a>, Professor<br>
+											CGPA: 3.18/4.00</p>
+										</div>
+									</li>
+									</ul>
+									<p>
+										To download my transcript click following (authorization required):<br>
+										<a href="https://drive.google.com/file/d/1VeenjqDc8ZDzKiLDMf7CyPMhDL1Ti-5Y/view?usp=sharing" class="btn btn-fill" target="_blank" download>B.Sc. transcipt</a><br>
+										<a href="https://drive.google.com/file/d/1cT4ts9ouLNBNwu8qK8D3_CX1_98xoC98/view?usp=sharing" class="btn btn-fill" target="_blank" download>Ph.D. transript (unofficial)</a>
+									</p>
+								</div>
+							</section>
+						
 						<!-- research -->
 							<section id="research">
 								<div class="container">
@@ -93,7 +126,16 @@
 											</li>
 										</article>
 										<article>
-											<h4>Project</h4>
+											<h4>Dataset</h4>
+											<li>
+												<a href="https://ieee-dataport.org/documents/cad-edgetune" itemprop="name">CAD-EdgeTune</a>
+											</li>
+											<li>
+												<a href="https://huggingface.co/datasets/mahmed10/MPSC_MV" itemprop="name">MPSC Multi-view Dataset</a>
+											</li>
+										</article>
+										<article>
+											<h4>Projects</h4>
 											<b>1. Learning the Optical & Physiological Mechanics of rPPG with Self-Supervision</b>
 											<li>
 												In this computational biology project, proposed a self-supervised learning approach for estimating heart rate from remote photoplethysmography (rPPG) signals obtained from skin videos without the need for synchronized ground truth annotations.
@@ -147,38 +189,6 @@
 											</li>
 										</article>
 									</div>
-								</div>
-							</section>
-
-						<!-- education -->
-							<section id="eudcation">
-								<div class="container">
-									<h3>Education</h3>
-									<ul class="ul-edu fa-ul">
-									<li>
-										<i class="fa-li fa fa-graduation-cap"></i>
-										<div class="description">
-											<p class="course">Ph.D. in Information Systems (January 2020 - Present)</p>
-											<p>University of Maryland, Baltimore County <br>
-											Supervisior: <a href="https://userpages.umbc.edu/~nroy/">Dr. Nirmalya Roy</a>, Associate Professor <br>
-											CGPA: 3.90/4.00</p>
-										</div>
-									</li>
-									<li>
-										<i class="fa-li fa fa-graduation-cap"></i>
-										<div class="description">
-											<p class="course">B.Sc. in Electrical and Electronic Engineering (January 2014  - April 2018)</p>
-											<p>University of Dhaka<br>
-											Supervisor: <a href="http://aa.binbd.com/">Dr. Md Atiqur Rahman Ahad</a>, Professor<br>
-											CGPA: 3.18/4.00</p>
-										</div>
-									</li>
-									</ul>
-									<p>
-										To download my transcript click following (authorization required):<br>
-										<a href="https://drive.google.com/file/d/1VeenjqDc8ZDzKiLDMf7CyPMhDL1Ti-5Y/view?usp=sharing" class="btn btn-fill" target="_blank" download>B.Sc. transcipt</a><br>
-										<a href="https://drive.google.com/file/d/1cT4ts9ouLNBNwu8qK8D3_CX1_98xoC98/view?usp=sharing" class="btn btn-fill" target="_blank" download>Ph.D. transript (unofficial)</a>
-									</p>
 								</div>
 							</section>
 
