--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>Masud Ahmed</h2>
-										<p> Graduate Teaching Assistant<br />
+										<p> Graduate Research Assistant<br />
 										<a href="https://www.umbc.edu/">Univesity of Maryland, Baltimore County</a>.</p>
 									</header>
 									<p>
@@ -66,7 +66,7 @@
 								
 										As a member of the Mobile, Pervasive and Sensor Computing (MPSC) Lab, I thrive in collaborative settings and am passionate about exploring theoretical and application-driven research. My work spans a range of exciting areas, from computer vision to natural language processing, focusing on the practical applications of AI in Robotics.
 									</p>
-									<a href="https://drive.google.com/file/d/1_mULC8TMnVEv-kTONwwbLjk5zvi4ZYau/view?usp=sharing" class="btn btn-fill" target="_blank" download>To download my resume click here</a>
+									<a href="https://drive.google.com/file/d/1LM5wiurAyluJ0kEZQkh42TUP6T5p1pLK/view?usp=sharing" class="btn btn-fill" target="_blank" download>To download my resume click here</a>
 								</div>
 							</section>
 
