--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								
 										As a member of the Mobile, Pervasive and Sensor Computing (MPSC) Lab, I thrive in collaborative settings and am passionate about exploring theoretical and application-driven research. My work spans a range of exciting areas, from computer vision to natural language processing, focusing on the practical applications of AI in Robotics.
 									</p>
-									<a href="https://drive.google.com/file/d/1LM5wiurAyluJ0kEZQkh42TUP6T5p1pLK/view?usp=sharing" class="btn btn-fill" target="_blank" download>To download my resume click here</a>
+									<a href="https://drive.google.com/file/d/1y9h9rzE7t11b8boEX2dI4qeMQNgTEbtk/view?usp=sharing" class="btn btn-fill" target="_blank" download>To download my resume click here</a>
 								</div>
 							</section>
 
@@ -136,24 +136,31 @@
 										</article>
 										<article>
 											<h4>Projects</h4>
-											<b>1. Learning the Optical & Physiological Mechanics of rPPG with Self-Supervision</b>
-											<li>
-												In this computational biology project, proposed a self-supervised learning approach for estimating heart rate from remote photoplethysmography (rPPG) signals obtained from skin videos without the need for synchronized ground truth annotations.
-											</li>
-											<li>
-												Developed a contrastive learning-based pretraining strategy to learn the underlying diffusion signals' frequency, phase, and temporal coherence from unlabeled video frame sequences.
-											</li>
+												<div class="pub-list-item" style="margin-bottom: 1rem" itemscope="" itemtype="http://schema.org/CreativeWork">
+													<i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
+													<b> Learning the Optical & Physiological Mechanics of rPPG with Self-Supervision</b>
+													<li>
+														In this computational biology project, proposed a self-supervised learning approach for estimating heart rate from remote photoplethysmography (rPPG) signals obtained from skin videos without the need for synchronized ground truth annotations.
+													</li>
+													<li>
+														Developed a contrastive learning-based pretraining strategy to learn the underlying diffusion signals' frequency, phase, and temporal coherence from unlabeled video frame sequences.
+													</li>
+			  									</div>
 
-											<b>2. Active Learning for Semantic Segmentation in Mobile Robotics</b>
-											<li>
-												Develop a real-time framework for active selection of informative regions in visual data for continual learning in semantic segmentation.
-											</li>
-											<li>
-												Entropy-driven ranking and cyclical feedback loop.
-											</li>
-											<li>
-												Reduced data transfer overhead, improving model performance with minimal labeled data.
-											</li>
+												<div class="pub-list-item" style="margin-bottom: 1rem" itemscope="" itemtype="http://schema.org/CreativeWork">
+													<i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
+													<b> Active Learning for Semantic Segmentation in Mobile Robotics</b>
+													<li>
+														Develop a real-time framework for active selection of informative regions in visual data for continual learning in semantic segmentation.
+													</li>
+													<li>
+														Entropy-driven ranking and cyclical feedback loop.
+													</li>
+													<li>
+														Reduced data transfer overhead, improving model performance with minimal labeled data.
+													</li>
+			  									</div>
+											
 
 											<b>3. Strata and Viewpoint Invariant Encoding for Robust Video Action Recognition</b>
 											<li>
