--- a/index.html
+++ b/index.html
@@ -137,63 +137,53 @@
 										<article>
 											<h4>Projects</h4>
 												<div class="pub-list-item" style="margin-bottom: 1rem" itemscope="" itemtype="http://schema.org/CreativeWork">
-													<i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
+													<i class="fa fa-gamepad pub-icon" aria-hidden="true"></i>
 													<b> Learning the Optical & Physiological Mechanics of rPPG with Self-Supervision</b>
 													<li>
 														In this computational biology project, proposed a self-supervised learning approach for estimating heart rate from remote photoplethysmography (rPPG) signals obtained from skin videos without the need for synchronized ground truth annotations.
-													</li>
-													<li>
 														Developed a contrastive learning-based pretraining strategy to learn the underlying diffusion signals' frequency, phase, and temporal coherence from unlabeled video frame sequences.
 													</li>
 			  									</div>
 
 												<div class="pub-list-item" style="margin-bottom: 1rem" itemscope="" itemtype="http://schema.org/CreativeWork">
-													<i class="fa fa-file-text-o pub-icon" aria-hidden="true"></i>
+													<i class="fa fa-gamepad pub-icon" aria-hidden="true"></i>
 													<b> Active Learning for Semantic Segmentation in Mobile Robotics</b>
 													<li>
 														Develop a real-time framework for active selection of informative regions in visual data for continual learning in semantic segmentation.
-													</li>
-													<li>
 														Entropy-driven ranking and cyclical feedback loop.
-													</li>
-													<li>
 														Reduced data transfer overhead, improving model performance with minimal labeled data.
 													</li>
 			  									</div>
-											
 
-											<b>3. Strata and Viewpoint Invariant Encoding for Robust Video Action Recognition</b>
-											<li>
-												Address the challenge of robust video action recognition (VAR) in diverse settings with varying viewpoints and sensors.
-											</li>
-											<li>
-												Propose a joint optimization method leveraging contrastive and adversarial loss for learning sensors and viewpoint invariant representation from unlabeled synchronous multiview (MV) video data.
-											</li>
-											<li>
-												Collect a large-scale time synchronous MV video dataset encompassing diverse settings, actions, viewpoints, and sensor properties.
-											</li>
+												<div class="pub-list-item" style="margin-bottom: 1rem" itemscope="" itemtype="http://schema.org/CreativeWork">
+													<i class="fa fa-gamepad pub-icon" aria-hidden="true"></i>
+													<b> Strata and Viewpoint Invariant Encoding for Robust Video Action Recognition</b>
+													<li>
+														Address the challenge of robust video action recognition (VAR) in diverse settings with varying viewpoints and sensors.
+														Propose a joint optimization method leveraging contrastive and adversarial loss for learning sensors and viewpoint invariant representation from unlabeled synchronous multiview (MV) video data.
+														Collect a large-scale time synchronous MV video dataset encompassing diverse settings, actions, viewpoints, and sensor properties.
+													</li>
+			  									</div>
 
-											<b>4.Semantic Clustering Innovation: Novel Categories Discovery (NCD)</b>
-											<li>
-												Develop NCD for novel data clustering based on known class semantics, overcoming pseudo-labeling limitations.
-											</li>
-											<li>
-												Leverage data sampling and multinoulli distribution for implicit semantic clustering without extensive annotations.
-											</li>
-											<li>
-												Align class neuron activation distributions through Monte-Carlo sampling, explore directional statistics, and conduct ablation studies to advance state-of-the-art clustering approaches.
-											</li>
-											
-											<b>5. Establishment of Remote Robotics Collaboration and Path Planning</b>
-											<li>
-												Facilitate a collaborative initiative between the Army Research Lab (ARL) and the University of Maryland Baltimore County (UMBC).
-											</li>
-											<li>
-												Implement the DVPG network to enable remote robot operation, and remote real-world data collection.
-											</li>
-											<li>
-												Enable data collection from any location with DVPG network access within the Army Research Lab, enhancing flexibility and accessibility.
-											</li>
+												<div class="pub-list-item" style="margin-bottom: 1rem" itemscope="" itemtype="http://schema.org/CreativeWork">
+													<i class="fa fa-gamepad pub-icon" aria-hidden="true"></i>
+													<b> Semantic Clustering Innovation: Novel Categories Discovery (NCD)</b>
+													<li>
+														Develop NCD for novel data clustering based on known class semantics, overcoming pseudo-labeling limitations.
+														Leverage data sampling and multinoulli distribution for implicit semantic clustering without extensive annotations.
+														Align class neuron activation distributions through Monte-Carlo sampling, explore directional statistics, and conduct ablation studies to advance state-of-the-art clustering approaches.
+													</li>
+			  									</div>
+
+												<div class="pub-list-item" style="margin-bottom: 1rem" itemscope="" itemtype="http://schema.org/CreativeWork">
+													<i class="fa fa-gamepad pub-icon" aria-hidden="true"></i>
+													<b> Establishment of Remote Robotics Collaboration and Path Planning</b>
+													<li>
+														Facilitate a collaborative initiative between the Army Research Lab (ARL) and the University of Maryland Baltimore County (UMBC).
+														Implement the DVPG network to enable remote robot operation, and remote real-world data collection.
+														Enable data collection from any location with DVPG network access within the Army Research Lab, enhancing flexibility and accessibility.
+													</li>
+			  									</div>
 										</article>
 									</div>
 								</div>
