--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<header class="major">
 										<h2>Masud Ahmed</h2>
 										<p> Graduate Research Assistant<br />
-										<a href="https://www.umbc.edu/">Univesity of Maryland, Baltimore County</a>.</p>
+										<a href="https://www.umbc.edu/">Univesity of Maryland, Baltimore County</a></p>
 									</header>
 									<p>
 										Welcome to my personal webpage! I am an enthusiastic Ph.D. candidate at the University of Maryland, Baltimore County, specializing in Artificial Intelligence and Machine Learning. Under the guidance of <a href="https://userpages.umbc.edu/~nroy/">Dr. Nirmalya Roy</a> in the Department of Information Systems, I am honing my skills in the cutting-edge fields of generative modeling, domain adaptation, and various forms of learning, including continual, self-supervised, and active learning.
@@ -382,6 +382,18 @@
 									<h3>Work & Research Experiences</h3>
 									<div class="features">
 										<article>
+											<a class="image"><img src="images/cards.png" alt="" /></a>
+											<div class="inner">
+												<h4>
+													<a href="https://cards.umbc.edu/">Center for Real-time Distributed Sensing and Autonomy, University of Maryland Baltimore County</a>
+												</h4>
+												[July 2021  - Present]
+
+												<p>Working as a graduate research assistant. In this research center I am working with robotics. My project is to virtual reality multi robot collboration network.</p>
+											</div>
+										</article>
+										
+										<article>
 											<a class="image"><img src="images/mpsclogo.png" alt="" /></a>
 											<div class="inner">
 												<h4>
@@ -389,7 +401,7 @@
 												</h4>
 												[January 2020  - Present]
 
-												<p>Working as a graduate assistant. My research topic in this lab is related to computer vision and machine learning. I am working with RGB and Lidar data based object segmentation and tracking. The application of research is monitoring urban areas and the marine environment.</p>
+												<p>Working as a graduate research assistant. My research topic in this lab is related to computer vision and machine learning. I am working with RGB and Lidar data.</p>
 											</div>
 										</article>
 
