--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 									<p>
 										Welcome to my personal webpage! I am an enthusiastic Ph.D. candidate at the University of Maryland, Baltimore County, specializing in Artificial Intelligence and Machine Learning. Under the guidance of <a href="https://userpages.umbc.edu/~nroy/">Dr. Nirmalya Roy</a> in the Department of Information Systems, I am honing my skills in the cutting-edge fields of generative modeling, domain adaptation, and various forms of learning, including continual, self-supervised, and active learning.
 								
-										As a member of the Mobile, Pervasive and Sensor Computing (MPSC) Lab, I thrive in collaborative settings and am passionate about exploring theoretical and application-driven research. My work spans a range of exciting areas, from computer vision to natural language processing, focusing on the practical applications of AI in Robotics.
+										As a member of the Mobile, Pervasive and Sensor Computing (MPSC) Lab, I thrive in collaborative settings and am passionate about exploring theoretical and application-driven research.
 									</p>
-									<a href="https://drive.google.com/file/d/1y9h9rzE7t11b8boEX2dI4qeMQNgTEbtk/view?usp=sharing" class="btn btn-fill" target="_blank" download>To download my resume click here</a>
+									<a href="https://drive.google.com/file/d/1VBr1cXXW7JP0E0QF58La8o4CTcNdAsLl/view?usp=sharing" class="btn btn-fill" target="_blank" download>To download my CV click here</a>
 								</div>
 							</section>
 
@@ -110,19 +110,20 @@
 										<article>
 											<h4>Theoretical</h4>
 											<li>
-												Predictive Modeling, Domain Adaptation, Continual Learning, Self-Supervised Learning, Active Learning, Transformer, Diffusion model, Large Language Model, Large Vision Model
+												Domain Adaptation, Continual Learning, Self-Supervised Learning, Active Learning, Foundation Model, Transformer, Large Language Model, Large Vision Model
 											</li>
 										</article>
 										<article>
 											<h4>Application</h4>
 											<li>
-												Computer Vision, Natural Language Processing, Robotics, Wearable Device Data Analysis, Sensor Data Analysis
+												Computer Vision, Natural Language Processing, Healthcare, Robotics, Wearable Device Data Analysis, Sensor Data Analysis
 											</li>
 										</article>
 										<article>
 											<h4>Programming Languages</h4>
 											<li>
 												Python, C++, C, SQL (Oracle), MATLAB, HTML, R programming, ROS (Robot Operating System)
+												PyTorch, HuggingFace Transformers, JAX, Tensorflow, spaCy
 											</li>
 										</article>
 										<article>
