--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 												<div class="pub-list-item" style="margin-bottom: 1rem" itemscope="" itemtype="http://schema.org/CreativeWork">
 													<i class="fa fa-gamepad pub-icon" aria-hidden="true"></i>
-													<b> Transformer-based LIDAR Semantic Segmentation Through Vector Quantization</b>
+													<a href="https://github.com/mahmed10/LPM.git">Transformer-based LIDAR Semantic Segmentation Through Vector Quantization</a>
 													<li>
 														Explored the application of Vector Quantization (VQ) techniques to LIDAR semantic segmentation, addressing challenges in generalization and interpretability present in traditional models
 													</li>
@@ -159,9 +159,8 @@
 													</li>
 			  									</div>
 												<div class="pub-list-item" style="margin-bottom: 1rem" itemscope="" itemtype="http://schema.org/CreativeWork">
-												    <i class="fa fa-code pub-icon" aria-hidden="true"></i>
-												    <b> Active Learning for Semantic Segmentation in Mobile Robotics</b>
-												    <a href="https://github.com/mahmed10/ARS_Finetune.git">Git Repo</a>
+												    <i class="fa fa-gamepad pub-icon" aria-hidden="true"></i>
+												    <a href="https://github.com/mahmed10/ARS_Finetune.git">Active Learning for Semantic Segmentation in Mobile Robotics</a>
 												    <li>
 												        Develop a real-time framework for active selection of informative regions in visual data for continual learning in semantic segmentation
 												    </li>
@@ -176,9 +175,8 @@
 												    </li>
 												</div>
 												<div class="pub-list-item" style="margin-bottom: 1rem" itemscope="" itemtype="http://schema.org/CreativeWork">
-												    <i class="fa fa-code pub-icon" aria-hidden="true"></i>
-												    <b> Semantic Clustering Innovation: Novel Categories Discovery (NCD)</b>
-												    <a href="https://github.com/mxahan/NCD_Experiments">Git Repo</a>
+												    <i class="fa fa-gamepad pub-icon" aria-hidden="true"></i>
+												    <a href="https://github.com/mxahan/NCD_Experiments">Semantic Clustering Innovation: Novel Categories Discovery (NCD)</a>
 												    <li>
 												        Develop NCD based algorithm for novel data clustering based on known class semantics, overcoming pseudo-labeling limitations
 												    </li>
@@ -190,10 +188,8 @@
 												    </li>
 												</div>
 												<div class="pub-list-item" style="margin-bottom: 1rem" itemscope="" itemtype="http://schema.org/CreativeWork">
-												    <i class="fa fa-code pub-icon" aria-hidden="true"></i>
-												    
-												    <b> Learning the Optical & Physiological Mechanics of rPPG with Self-Supervision</b>
-												    <a href="https://github.com/mxahan/SrPPG.git">Git Repo</a>
+												    <i class="fa fa-gamepad pub-icon" aria-hidden="true"></i>
+												    <a href="https://github.com/mxahan/SrPPG.git">Learning the Optical & Physiological Mechanics of rPPG with Self-Supervision</a>
 												    <li>
 												        In this computational biology project, proposed a self-supervised learning approach for estimating heart rate from remote photoplethysmography (rPPG) signals obtained from skin videos without the need for synchronized ground truth annotations
 												    </li>
@@ -202,9 +198,8 @@
 												    </li>
 												</div>
 												<div class="pub-list-item" style="margin-bottom: 1rem" itemscope="" itemtype="http://schema.org/CreativeWork">
-												    <i class="fa fa-robot pub-icon" aria-hidden="true"></i>
-												    <b> Distributed Collaborative Robotics and Federated Learning in Vision</b>
-												    <a href="https://github.com/mahmed10/CRA7_demo.git">Git Repo</a>
+												    <i class="fa fa-gamepad pub-icon" aria-hidden="true"></i>
+												    <a href="https://github.com/mahmed10/CRA7_demo.git">Distributed Collaborative Robotics and Federated Learning in Vision</a>
 												    <li>
 												        Developed a framework for Federated Class-Incremental Learning (FCIL) that enables collaborative training of machine learning models across geographically distributed agents without sharing raw data
 												    </li>
@@ -223,8 +218,7 @@
 
 												<div class="pub-list-item" style="margin-bottom: 1rem" itemscope="" itemtype="http://schema.org/CreativeWork">
 													<i class="fa fa-gamepad pub-icon" aria-hidden="true"></i>
-													<b> Strata and Viewpoint Invariant Encoding for Robust Video Action Recognition</b>
-													<a href="https://github.com/mxahan/video_MV_ARL.git">Git Repo</a>
+													<a href="https://github.com/mxahan/video_MV_ARL.git">Strata and Viewpoint Invariant Encoding for Robust Video Action Recognition</a>
 													<li>
 														Address the challenge of robust video action recognition (VAR) in diverse settings with varying viewpoints and sensors
 													</li>
